--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
 # Frontend Environment Variables
 
 # Backend API URL
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5000/api || restro-iq-lead-crm-pdy3.vercel.app
